# voyage-vii

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Directory.Packages.props  Dockerfile  Hydra.slnx  PRIVACY.md  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: build-tigerbeetle-client.ps1  ci.yml  deploy-api.yml  deploy-foundation.yml  deploy-postgres.yml  deploy-tigerbeetle.yml  seed-dev.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: app-commands.toml
apps/desktop/src-tauri/resources/: .gitignore
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/runtime/: mod.rs
apps/desktop/src-tauri/src/smoke/: mod.rs
apps/desktop/src-tauri/tests/: all.rs
contracts/schemas/: desktop-snapshot.schema.json  error.schema.json  handshake.schema.json  runtime-manifest.schema.json  status.schema.json  writable-manifest.schema.json
docker/tigerbeetle/: Dockerfile  entrypoint.sh
docs/adr/: 0001-local-first-process-boundaries.md  0002-postgresql-and-tigerbeetle-ownership.md  0003-zig-rest-and-native-database-clients.md  0004-managed-and-external-runtime-modes.md  0005-authentication-handshake-and-http-boundaries.md  0006-writable-roots-locking-and-local-lifecycle.md  README.md  (+10 more)
modules/: README.md
product/spec/: PRD.md
runtime/: sources.json
(+221 files in other folders)
